# substrate-sm2

./: .gitignore  Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  service.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
primitives/sm2/: Cargo.toml
primitives/sm2/src/: io.rs  lib.rs  rt_sig.rs  sm2.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
utils/: Cargo.toml
utils/src/: main.rs
utils/subxt/: Cargo.toml
utils/subxt/src/: lib.rs
