[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-template'
version = '2.0.0-dev'

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
safe-mix = { default-features = false, version = '1.0.0' }
sp-std = { version = "2.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-io = { version = "2.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-core = { version = "2.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { version = "2.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-support = { version = "2.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { version = "2.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }


[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-std/std',
    'sp-core/std',
    'frame-support/std',
    'safe-mix/std',
    'sp-io/std',
    'frame-system/std',
    'sp-runtime/std'
]
